# mma_experiments

./: README.md  pyproject.toml  rev-predict.ipynb
.devcontainer/: Dockerfile  devcontainer.json
Mongine/: 01_fb_investigating.ipynb  01_get_data.ipynb  01_simple_driving comparisons.ipynb  01_simple_driving.ipynb  analysis_util_01.py  datautil.py
Mongine/data/: 2024-06-19_fermliving_shopify_order_analytics.csv
mmm/fbgoogle/: 02utilfbgoogle.py  03_mmm_example.ipynb  instant-independent.ipynb  utilfbgoogle.py  utils02.py  utils03.py
mmm/first_mmm/: utils.py
