[tool.poetry]
name = "mmm_experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
arviz = "^0.18.0"
pymc = "^5.15.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
graphviz = "^0.20.3"
ipywidgets = "^8.1.3"
pymc-marketing = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
